# gecko

./: .eslintignore  .travis.yml  CLOBBER  Cargo.toml  azure-pipelines.yml
.cargo/: config.in
browser/base/content/: browser-sidebar.js  browser.js
browser/components/: BrowserGlue.jsm  distribution.js  nsBrowserGlue.js
browser/components/enterprisepolicies/: Policies.jsm
browser/components/places/content/: bookmarkProperties.xul  bookmarksSidebar.js  bookmarksSidebar.xul  editBookmark.js  historySidebar.js  (+7 more)
browser/installer/: package-manifest.in
config/: rules.mk
dom/base/: nsDOMWindowUtils.cpp
dom/notification/: NotificationDB.jsm  moz.build
dom/xul/: XULDocument.cpp  XULPersist.cpp
gfx/webrender_bindings/: Cargo.toml
gfx/webrender_bindings/src/: program_cache.rs
mobile/android/components/: PersistentNotificationHandler.js
mobile/android/installer/: package-manifest.in
netwerk/base/: nsNetUtil.cpp
python/mozbuild/mozbuild/: mach_commands.py  vendor_rust.py
security/certverifier/: NSSCertDBTrustDomain.cpp  NSSCertDBTrustDomain.h
security/manager/ssl/: CSTrustDomain.cpp  CSTrustDomain.h  CertBlocklist.cpp  ContentSignatureVerifier.h  DataStorage.cpp  NSSErrorsService.h  moz.build  nsNSSModule.cpp
services/common/: blocklist-clients.js
servo/components/style/: Cargo.toml
storage/: Variant.cpp  Variant.h  moz.build  mozStorageSQLFunctions.cpp
storage/variant/: Cargo.toml
storage/variant/src/: lib.rs
testing/geckodriver/: Cargo.toml
toolkit/: moz.configure
toolkit/components/: moz.build
toolkit/components/kvstore/: Cargo.toml  kvstore.jsm  moz.build  nsIKeyValue.idl  nsKeyValueModule.cpp
toolkit/components/kvstore/src/: data_type.rs  error.rs  lib.rs  owned_value.rs  ownedvalue.rs  task.rs  variant.rs
toolkit/components/kvstore/test/: TestKeyValueStore.cpp  moz.build  test_kvstore.js
toolkit/components/kvstore/test/xpcshell/: test_kvstore.js
toolkit/components/xulstore/: Cargo.toml  XULStore.cpp  XULStore.h  XULStore.js  XULStore.jsm  components.conf  lib.rs  moz.build  nsIXULStore.idl  nsXULStoreModule.cpp
toolkit/components/xulstore/src/: error.rs  ffi.rs  iter.rs  lib.rs  persist.rs  statics.rs  store.rs
toolkit/components/xulstore/tests/chrome/: window_persistence.xul
toolkit/components/xulstore/tests/gtest/: TestXULStore.cpp  moz.build  test.rs
toolkit/components/xulstore/tests/xpcshell/: test_XULStore.js  test_XULStoreStore.js  test_XULStore_migration.js  test_XULStore_migration_fail_invalid_data.js  test_XULStore_migration_fail_invalid_json.js  test_XULStore_migration_profile_change.js  xpcshell.ini
toolkit/modules/: AppConstants.jsm  Services.jsm
tools/lint/eslint/: modules.json
xpcom/base/: ErrorList.py  ErrorNames.cpp
xpcom/components/: nsComponentManager.cpp
xpcom/idl-parser/xpidl/: rust.py
xpcom/rust/moz_task/: Cargo.toml
xpcom/rust/moz_task/src/: lib.rs
xpcom/threads/: MainThreadUtils.h  nsThreadManager.cpp  nsThreadUtils.cpp
xpfe/appshell/: nsXULWindow.cpp  nsXULWindow.h
(+44 files in other folders)
