[package]
name = "kvstore"
version = "0.1.0"
authors = ["Myk Melez <myk@mykzilla.org>"]

[dependencies]
libc = "0.2"
lmdb-rkv = "0.8"
log = "0.4"
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../servo/support/gecko/nsstring" }
rkv = "0.4"
storage_variant = { path = "../../../storage/variant" }
xpcom = { path = "../../../xpcom/rust/xpcom" }

# Get rid of failure's dependency on backtrace. Eventually
# backtrace will move into Rust core, but we don't need it here.
[dependencies.failure]
version = "0.1"
default_features = false
features = ["derive"]
