[package]
name = "xulstore"
version = "0.1.0"
authors = ["nobody@mozilla.org"]
license = "MPL-2.0"

[dependencies]
itertools = "^0.7.6"
lazy_static = "1.0"
lmdb = "0.8"
nsstring = { path = "../../../servo/support/gecko/nsstring" }
nserror = { path = "../../../xpcom/rust/nserror" }
rkv = "0.3.0"
tempdir = "0.3.5"
xpcom = { path = "../../../xpcom/rust/xpcom" }
