[package]
name = "xulstore"
version = "0.1.0"
authors = ["nobody@mozilla.org"]
license = "MPL-2.0"

[dependencies]
itertools = "^0.7.6"
lazy_static = "1.0"
lmdb-rkv = "0.9"
log = "0.4"
nsstring = { path = "../../../xpcom/rust/nsstring" }
nserror = { path = "../../../xpcom/rust/nserror" }
rkv = "0.7.0"
tempdir = "0.3.5"
xpcom = { path = "../../../xpcom/rust/xpcom" }
